--- a/views/home.html
+++ b/views/home.html
@@ -19,14 +19,17 @@
 <body>
     <header>
         <div class="encabezado">
+            <div class="arriba">
+                <div class="logobuscador">
             <div class="logo">
                 <img src = 'images\logo-mercado-liebre.svg' alt="Logo">
             </div>
                 <div class="buscador">Buscar productos, marcas y más</div>
                 <div class="lupita"><i class="fa-solid fa-magnifying-glass"></i>
             </div>
-        </div>
+            </div>
         <p><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédito</p>     
+            </div>
         <br>
         <nav>
             <ul class="left-nav">
@@ -37,15 +40,15 @@
             </ul>    
             
             <ul class="right-nav">
-            <li><a href = "crea tu cuenta">Creá tu cuenta</a><i class="fa-regular fa-address-card"></i></li> 
-            <li><a href = "ingresa">Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
+            <li><a href = "/register">Creá tu cuenta</a><i class="fa-regular fa-address-card"></i></li> 
+            <li><a href = "/login">Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
             <li><a href = "mis compras">Mis Compras</a><i class="fa-solid fa-basket-shopping"></i></li>
             </ul>
         </nav>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
             </div>          
-        
+        </div> 
     </header>
     <main>
         <div>
@@ -63,7 +66,7 @@
                         <p class="descuentos">40% OFF</p>
                     </div>
                         <br>                        
-                        <h3>Cafetera Moulinex</h3>
+                        <h3 class="nombre">Cafetera Moulinex</h3>
                     </div>
                     
                        
@@ -77,7 +80,7 @@
                         <p class="descuentos">20% OFF</p>
                     </div>
                         <br>
-                        <h3>MacBook Pro 2019</h3>
+                        <h3 class="nombre">MacBook Pro 2019</h3>
                     </div>
                 </article>
                 <article>                
@@ -89,7 +92,7 @@
                         <p class="descuentos">10% OFF</p>
                     </div>
                         <br>
-                        <h3>Samsung Galaxy S10</h3>
+                        <h3 class="nombre">Samsung Galaxy S10</h3>
                     </div>
                 </article>
                 <article>
@@ -101,15 +104,15 @@
                         <p class="descuentos">5% OFF</p>
                     </div>                                            
                         <br>
-                        <h3>SmartTv Samsung 43"</h3>                    
+                        <h3 class="nombre">SmartTv Samsung 43"</h3>                    
                     </div>
                 </article>   
         </section>
         </div>
         <h2>Ofertas</h2>
-        <section>
-                <div class="ofertas">
-                <article>
+        <div class="visita">
+                <section>
+                    <article>
                     <img src="images/img-cafetera-moulinex.jpg" alt = "Cafetera">
                     <div class="descripcion">
                         <div class="truck"><i class="fa-solid fa-truck"></i></div>
@@ -118,7 +121,7 @@
                         <p class="descuentos">40% OFF</p>
                     </div>
                         <br>
-                        <h3>Cafetera Moulinex</h3>
+                        <h3 class="nombre">Cafetera Moulinex</h3>
                     </div>
                 </article>
                 <article>
@@ -130,7 +133,7 @@
                         <p class="descuentos">20% OFF</p>
                     </div>
                         <br>
-                        <h3>MacBook Pro 2019</h3>
+                        <h3 class="nombre">MacBook Pro 2019</h3>
                     </div>
                 </article>    
                 <article>
@@ -142,7 +145,7 @@
                         <p class="descuentos">10% OFF</p>
                     </div>
                         <br>
-                        <h3>Samsung Galaxy S10</h3>
+                        <h3 class="nombre">Samsung Galaxy S10</h3>
                     </div>
                 </article>
                 <article>
@@ -154,7 +157,7 @@
                         <p class="descuentos">5% OFF</p>
                     </div>
                         <br>
-                        <h3>SmartTv Samsung 43"</h3>
+                        <h3 class="nombre">SmartTv Samsung 43"</h3>
                     </div>
                 </article>    
         </section>
@@ -180,12 +183,10 @@
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </section>
-        <br>
-        <section>
+        <br>        
             <div class="derechos">            
                 <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-            </div>
-        </section>
+            
         
     </footer>
     
